# openings-moe-rs

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml
examples/: details.rs  list.rs
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
openings_moe/: all.html  fn.all.html  index.html  sidebar-items.js
openings_moe/entity/: index.html  sidebar-items.js  struct.Song.html
openings_moe/entity/details/: index.html  sidebar-items.js  struct.Data.html  struct.Details.html  struct.Next.html
openings_moe/entity/list/: index.html  sidebar-items.js  struct.Entry.html  type.List.html
src/: lib.rs
src/entity/: details.rs  list.rs  mod.rs
src/openings_moe/: lib.rs.html
src/openings_moe/entity/: details.rs.html  list.rs.html  mod.rs.html
